--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,34 +9,10 @@
 <body>
 <form id="welcomeForm" class="pure-form" style="width: 40%; margin: 0 auto">
     <input type="text" class="pure-input-rounded" name="name" placeholder="name">
-    <label class="pure-radio">
-        <input type="radio" name="lang" value="1" checked>
-        🇺🇸
-    </label>
-    <label class="pure-radio">
-        <input type="radio" name="lang" value="2">
-        🇵🇱
-    </label>
+    <fieldset id = "langs" ></fieldset>
     <button id="btn" class="pure-button pure-button-primary">Submit</button>
 </form>
 <div id="welcome" style="width: 40%; margin: 0 auto"></div>
-<script>
-    const div = document.getElementById('welcome');
-    const form = document.getElementById('welcomeForm');
-    document.getElementById('btn').addEventListener('click', (event) => {
-        event.preventDefault();
-        const formObj = {
-            name: form.elements.name.value,
-            lang: form.elements.lang.value
-        };
-        fetch('http://localhost:8081/api?' + new URLSearchParams(formObj))
-            .then(response => response.text())
-            .then((text) => {
-                div.innerHTML = `
-            <h1>${text}</h1>
-        `;
-            });
-    });
-</script>
+<script src = "script.js"></script>
 </body>
 </html>
